# htidp

./: .gitignore  Dockerfile  IMPLEMENTATION_SUMMARY.md  README.md  README_IMPLEMENTATION.md  Rakefile  api_flow.md  client.js  client_test.js  config.ini  delegate_test.go  example_usage.py  go.mod  handshake_test.go  index.html  main.go  preamble_prompt.md  prompt.md  pyproject.toml  requirements.txt  schema_examples.json  store.go  store_test.go
app/: main.py  models.py  server.py  service.py
app/routers/: v1.py
app/templates/: base.html  contact.html  exchange.html  exchange_used.html
client/: client.js  index.html  profile.html  profile.js
examples/: README.md  client.html  example_server.py
examples/templates/: base.html  connection_view.html  connections.html  contact_form.html  contact_updated.html  contact_view.html  exchange_accept.html  exchange_completed.html  exchange_form.html  index.html  token_generated.html
server/: admin_test.go  api_me_test.go  crypto_utils.go  handshake_test.go  main.go  organization_test.go  store.go
tests/: requirements.txt  test_htidp.py
